src/objects/zqu__ZProduct__c.object
<CustomObject>
    <fields>
        <fullName>IsShipping__c</fullName>
        <label>IsShipping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antenna</fullName>
                </value>
                <value>
                    <fullName>Connectors, Cables, Switches</fullName>
                </value>
                <value>
                    <fullName>Data Sevices</fullName>
                </value>
                <value>
                    <fullName>Hardware Bundle</fullName>
                </value>
                <value>
                    <fullName>Hardware Bundle (CDMA)</fullName>
                </value>
                <value>
                    <fullName>Hardware Installation</fullName>
                </value>
                <value>
                    <fullName>Hardware Rental</fullName>
                </value>
                <value>
                    <fullName>Hardware Rental w/ Service</fullName>
                </value>
                <value>
                    <fullName>Harnesses</fullName>
                </value>
                <value>
                    <fullName>Insurance and Warranties - Nonrecurring</fullName>
                </value>
                <value>
                    <fullName>Insurance and Warranties - Recurring</fullName>
                </value>
                <value>
                    <fullName>Misc Parts and Kits</fullName>
                </value>
                <value>
                    <fullName>Misc. Hardware</fullName>
                </value>
                <value>
                    <fullName>Monthly AddOn Service</fullName>
                </value>
                <value>
                    <fullName>Monthly HOS Addon Srvc</fullName>
                </value>
                <value>
                    <fullName>Monthly Service</fullName>
                </value>
                <value>
                    <fullName>Software - Retail</fullName>
                </value>
                <value>
                    <fullName>Telematics Hardware</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Transfer and Admin Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>The vendor that supplies the ordered product.</description>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Networkfleet</fullName>
                </value>
                <value>
                    <fullName>BSM Wireless</fullName>
                </value>
                <value>
                    <fullName>GPS Insight</fullName>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>WEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WEXProductCategory__c</fullName>
        <label>WEX Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Determined</fullName>
                    <default>true</default>
                    <label>To Be Determined</label>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>ELD / HOS Software</fullName>
                </value>
                <value>
                    <fullName>GPS BUNDLE</fullName>
                </value>
                <value>
                    <fullName>GPS FINANCE CHRG</fullName>
                </value>
                <value>
                    <fullName>GPS RENTAL</fullName>
                </value>
                <value>
                    <fullName>Harnesses &amp; Cables</fullName>
                </value>
                <value>
                    <fullName>Installation</fullName>
                </value>
                <value>
                    <fullName>Misc Hardware</fullName>
                </value>
                <value>
                    <fullName>Misc Service</fullName>
                </value>
                <value>
                    <fullName>Monthly Service</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
                <value>
                    <fullName>Telematics Hardware</fullName>
                </value>
                <value>
                    <fullName>Transfer and Admin Fees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>